bug fix for m3u8 parser. added ability to download bookmark playlist from web server.

--- a/web/bookmarks.html
+++ b/web/bookmarks.html
@@ -86,7 +86,7 @@
 <body>
 <div class="container">
     <div class="clearfix">
-        <div class="float-start" style="margin-left:30px"><h4>Bookmarks [<a href="accounts.html">Accounts</a>]</h4></div>
+        <div class="float-start" style="margin-left:30px"><h4>Bookmarks [<a href="accounts.html">Accounts</a> | <a href="bookmarks.m3u8">Download Playlist</a>]</h4></div>
         <div class="float-end"><input type="text" onkeyup="javascript:filterByValue(this.value)"></div>
     </div>
     <div id="root"/>
