refactoring used video.js for play html

--- a/web/play.html
+++ b/web/play.html
@@ -79,7 +79,7 @@
             //video.src({ src: uri, type: "application/x-mpegURL" });
             video.src({
                 src: uri,
-                type: "application/vnd.apple.mpegurl",
+                type: "application/x-mpegURL",
             });
             video.play();
         }
