--- a/web/play.html
+++ b/web/play.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
-            href="https://vjs.zencdn.net/7.15.4/video-js.css"
+            href="https://vjs.zencdn.net/8.6.1/video-js.css"
             rel="stylesheet"
     />
 </head>
@@ -30,10 +30,9 @@
             allow
     ></iframe>
 </center>
-<script src="https://vjs.zencdn.net/7.15.4/video.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/videojs-http-streaming@2.11.0/dist/videojs-http-streaming.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/videojs-contrib-dash@2.11.0/dist/videojs-dash.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/videojs-youtube@2.6.1/dist/Youtube.min.js"></script>
+<script src="https://vjs.zencdn.net/8.6.1/video.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/videojs-http-streaming@3.9.0/dist/videojs-http-streaming.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/videojs-youtube@3.0.1/dist/Youtube.min.js"></script>
 <script>
     const video = videojs("video");
     const youtube = document.getElementById("youtube");
@@ -68,7 +67,7 @@
 
     function render(uri) {
         const videoElement = document.getElementById("video");
-        if (uri.includes("youtube.com") || uri.includes("youtu.be")) {
+        if (uri.includes("youtube.com") || uri.includes("youtu.be") || uri.includes("googlevideo.com")) {
             videoElement.style.display = "none";
             youtube.style.display = "block";
             const videoId = uri.split("v=")[1] || uri.split("/").pop();
@@ -76,10 +75,28 @@
         } else {
             youtube.style.display = "none";
             videoElement.style.display = "block";
-            //video.src({ src: uri, type: "application/x-mpegURL" });
+
+            let sourceType = '';
+            if (uri.includes('.m3u8') || uri.includes('.m3u')) { // Added .m3u for HLS playlists
+                sourceType = 'application/x-mpegURL'; // HLS
+            } else if (uri.includes('.mpd')) {
+                sourceType = 'application/dash+xml'; // DASH
+            } else if (uri.includes('.mp4')) {
+                sourceType = 'video/mp4'; // MP4
+            } else if (uri.includes('.webm')) {
+                sourceType = 'video/webm'; // WebM
+            } else if (uri.includes('.ts')) { // Explicitly handle MPEG Transport Stream
+                sourceType = 'video/mp2t';
+            }
+            else {
+                // Default to HLS if no specific extension is found, as it's common for live streams.
+                // Video.js might also try to guess if type is omitted, but explicit is better.
+                sourceType = 'application/x-mpegURL';
+            }
+
             video.src({
                 src: uri,
-                type: "application/x-mpegURL",
+                type: sourceType
             });
             video.play();
         }
