--- a/website/index.html
+++ b/website/index.html
@@ -37,6 +37,9 @@
                 <a href="#requirements">Requirements</a>
                 <a href="#guide">Guide</a>
                 <a href="https://github.com/xixogo5105/uiptv" target="_blank"><i class="fab fa-github"></i> GitHub</a>
+                <button id="theme-toggle" class="theme-btn" aria-label="Toggle Theme">
+                    <i class="fas fa-adjust"></i>
+                </button>
             </div>
         </div>
     </nav>
@@ -157,12 +160,10 @@
             </div>
             <div class="os-icons">
                 <i class="fab fa-linux" title="Linux"></i>
-                <i class="fab fa-ubuntu" title="Ubuntu"></i>
-                <i class="fas fa-leaf" title="Linux Mint"></i> <!-- Using leaf icon as a closer representation for Mint -->
                 <i class="fab fa-apple" title="macOS"></i>
                 <i class="fab fa-windows" title="Windows"></i>
             </div>
-            <p class="disclaimer">This website not affiliated with Linux, Linux Mint, Ubuntu, Apple, or Microsoft. All logos and trademarks belong to their respective owners.</p>
+            <p class="disclaimer">Not affiliated with Linux, Apple, or Microsoft. All logos and trademarks belong to their respective owners.</p>
             <div class="socials">
                 <a href="https://github.com/xixogo5105/uiptv"><i class="fab fa-github"></i></a>
             </div>
