--- a/website/index.html
+++ b/website/index.html
@@ -142,6 +142,13 @@
                         <span>Required if you intend to play YouTube videos via RSS feeds.</span>
                     </div>
                 </li>
+                <li>
+                    <i class="fas fa-film"></i>
+                    <div>
+                        <strong>FFmpeg</strong>
+                        <span>Required for the web app to play TS files.</span>
+                    </div>
+                </li>
             </ul>
         </div>
     </section>
