--- a/website/index.html
+++ b/website/index.html
@@ -22,6 +22,7 @@
     <meta property="twitter:image" content="https://github.com/user-attachments/assets/53c56841-0fb0-4c72-af15-7b2160b3eb37">
 
     <title>UIPTV - Universal IPTV Player</title>
+    <link rel="icon" type="image/png" href="https://github.com/xixogo5105/uiptv/assets/161976171/5563a042-157e-4ae7-bb6e-a72b38c8aa62">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
