--- a/website/index.html
+++ b/website/index.html
@@ -111,6 +111,16 @@
                 <h3>Performance</h3>
                 <p>SQLite caching for fast load times. Options to pause or clear cache as needed.</p>
             </div>
+            <div class="feature-card">
+                <i class="fas fa-file-import"></i>
+                <h3>Bulk Import</h3>
+                <p>Parse multiple accounts at once for Stalker Portal, Xtream Codes, and M3U playlists.</p>
+            </div>
+            <div class="feature-card">
+                <i class="fas fa-sync"></i>
+                <h3>Database Sync</h3>
+                <p>Synchronize your configuration and account databases between different instances.</p>
+            </div>
         </div>
     </section>
 
