--- a/website/index.html
+++ b/website/index.html
@@ -2,191 +2,201 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="UIPTV is a versatile, modern, open-source IPTV player for Windows, Linux, and macOS. Supports Stalker Portal, Xtream Codes, M3U playlists, and RSS feeds.">
-    <meta name="keywords" content="IPTV Player, UIPTV, Windows IPTV, Linux IPTV, macOS IPTV, Stalker Portal, Xtream Codes, M3U8, M3U Playlist, RSS Feed Video, Open Source, Streaming, HLS Player">
-    <meta name="author" content="UIPTV">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta content="UIPTV is a versatile, modern, open-source IPTV player for Windows, Linux, and macOS. Supports Stalker Portal, Xtream Codes, M3U playlists, and RSS feeds."
+          name="description">
+    <meta content="IPTV Player, UIPTV, Windows IPTV, Linux IPTV, macOS IPTV, Stalker Portal, Xtream Codes, M3U8, M3U Playlist, RSS Feed Video, Open Source, Streaming, HLS Player"
+          name="keywords">
+    <meta content="UIPTV" name="author">
 
     <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://xixogo5105.github.io/uiptv/">
-    <meta property="og:title" content="UIPTV - Universal IPTV Player">
-    <meta property="og:description" content="A versatile, modern IPTV player for Windows, Linux, and macOS. Now with tab-based navigation and enhanced player support.">
-    <meta property="og:image" content="https://github.com/user-attachments/assets/53c56841-0fb0-4c72-af15-7b2160b3eb37">
+    <meta content="website" property="og:type">
+    <meta content="https://xixogo5105.github.io/uiptv/" property="og:url">
+    <meta content="UIPTV - Universal IPTV Player" property="og:title">
+    <meta content="A versatile, modern IPTV player for Windows, Linux, and macOS. Now with tab-based navigation and enhanced player support."
+          property="og:description">
+    <meta content="https://github.com/user-attachments/assets/53c56841-0fb0-4c72-af15-7b2160b3eb37" property="og:image">
 
     <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://xixogo5105.github.io/uiptv/">
-    <meta property="twitter:title" content="UIPTV - Universal IPTV Player">
-    <meta property="twitter:description" content="A versatile, modern IPTV player for Windows, Linux, and macOS. Now with tab-based navigation and enhanced player support.">
-    <meta property="twitter:image" content="https://github.com/user-attachments/assets/53c56841-0fb0-4c72-af15-7b2160b3eb37">
+    <meta content="summary_large_image" property="twitter:card">
+    <meta content="https://xixogo5105.github.io/uiptv/" property="twitter:url">
+    <meta content="UIPTV - Universal IPTV Player" property="twitter:title">
+    <meta content="A versatile, modern IPTV player for Windows, Linux, and macOS. Now with tab-based navigation and enhanced player support."
+          property="twitter:description">
+    <meta content="https://github.com/user-attachments/assets/53c56841-0fb0-4c72-af15-7b2160b3eb37"
+          property="twitter:image">
 
     <title>UIPTV - Universal IPTV Player</title>
-    <link rel="icon" type="image/png" href="https://github.com/xixogo5105/uiptv/assets/161976171/5563a042-157e-4ae7-bb6e-a72b38c8aa62">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link href="https://github.com/xixogo5105/uiptv/assets/161976171/5563a042-157e-4ae7-bb6e-a72b38c8aa62" rel="icon"
+          type="image/png">
+    <link href="style.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
 <body id="top">
-    <nav>
-        <div class="nav-container">
-            <a href="#top" class="logo">
-                <img src="https://github.com/xixogo5105/uiptv/assets/161976171/5563a042-157e-4ae7-bb6e-a72b38c8aa62" alt="UIPTV Logo">
-                <span>UIPTV</span>
-            </a>
-            <div class="nav-links">
-                <a href="#features">Features</a>
-                <a href="#requirements">Requirements</a>
-                <a href="#guide">Guide</a>
-                <a href="https://github.com/xixogo5105/uiptv" target="_blank"><i class="fab fa-github"></i> GitHub</a>
-                <button id="theme-toggle" class="theme-btn" aria-label="Toggle Theme">
-                    <i class="fas fa-adjust"></i>
-                </button>
+<nav>
+    <div class="nav-container">
+        <a class="logo" href="#top">
+            <img alt="UIPTV Logo"
+                 src="https://github.com/xixogo5105/uiptv/assets/161976171/5563a042-157e-4ae7-bb6e-a72b38c8aa62">
+            <span>UIPTV</span>
+        </a>
+        <div class="nav-links">
+            <a href="#features">Features</a>
+            <a href="#requirements">Requirements</a>
+            <a href="#guide">Guide</a>
+            <a href="https://github.com/xixogo5105/uiptv" target="_blank"><i class="fab fa-github"></i> GitHub</a>
+            <button aria-label="Toggle Theme" class="theme-btn" id="theme-toggle">
+                <i class="fas fa-adjust"></i>
+            </button>
+        </div>
+    </div>
+</nav>
+<header>
+    <div class="hero">
+        <div class="hero-content">
+            <h1>Universal IPTV Player</h1>
+            <p>A versatile, modern IPTV player for Windows, Linux, and macOS. Now with tab-based navigation and enhanced
+                player support.</p>
+            <div class="cta-buttons">
+                <a class="btn primary" href="https://github.com/xixogo5105/uiptv/releases/latest" id="download-btn">
+                    <i class="fas fa-download"></i>
+                    <span id="download-text">Download Latest</span>
+                </a>
+                <a class="btn secondary" href="#features">Learn More</a>
             </div>
         </div>
-    </nav>
-    <header>
-        <div class="hero">
-            <div class="hero-content">
-                <h1>Universal IPTV Player</h1>
-                <p>A versatile, modern IPTV player for Windows, Linux, and macOS. Now with tab-based navigation and enhanced player support.</p>
-                <div class="cta-buttons">
-                    <a href="https://github.com/xixogo5105/uiptv/releases/latest" class="btn primary" id="download-btn">
-                        <i class="fas fa-download"></i>
-                        <span id="download-text">Download Latest</span>
-                    </a>
-                    <a href="#features" class="btn secondary">Learn More</a>
+        <div class="hero-image">
+            <img alt="UIPTV Screenshot"
+                 src="https://github.com/user-attachments/assets/53c56841-0fb0-4c72-af15-7b2160b3eb37">
+        </div>
+    </div>
+</header>
+
+<section class="features" id="features">
+    <h2>Key Features</h2>
+    <div class="feature-grid">
+        <div class="feature-card">
+            <i class="fas fa-tv"></i>
+            <h3>Multi-Protocol Support</h3>
+            <p>Stalker Portal, Xtream Codes, M3U Playlists (Local & Remote), and RSS Feeds.</p>
+        </div>
+        <div class="feature-card">
+            <i class="fas fa-play-circle"></i>
+            <h3>Advanced Player Support</h3>
+            <p>Includes embedded VLC & Lite players. Fully supports external players like MPV or SMPlayer.</p>
+        </div>
+        <div class="feature-card">
+            <i class="fab fa-youtube"></i>
+            <h3>YouTube Integration</h3>
+            <p>Watch YouTube channels directly via RSS feeds (requires <code>yt-dlp</code>).</p>
+        </div>
+        <div class="feature-card">
+            <i class="fas fa-network-wired"></i>
+            <h3>Web Server & Headless</h3>
+            <p>Stream to any device on your network via browser. Supports headless mode for server-only usage.</p>
+        </div>
+        <div class="feature-card">
+            <i class="fas fa-search"></i>
+            <h3>Search & Favorites</h3>
+            <p>Real-time search filtering and easy favorites management for quick access to your content.</p>
+        </div>
+        <div class="feature-card">
+            <i class="fas fa-filter"></i>
+            <h3>Smart Filtering</h3>
+            <p>Exclude unwanted categories or channels. Pause filters on the fly for full access.</p>
+        </div>
+        <div class="feature-card">
+            <i class="fas fa-palette"></i>
+            <h3>Customizable UI</h3>
+            <p>Modern tab-based interface with Dark Mode, custom fonts, and scaling options.</p>
+        </div>
+        <div class="feature-card">
+            <i class="fas fa-sync-alt"></i>
+            <h3>Auto-Updates</h3>
+            <p>Built-in update checker ensures you are always running the latest version.</p>
+        </div>
+        <div class="feature-card">
+            <i class="fas fa-database"></i>
+            <h3>Performance</h3>
+            <p>SQLite caching for fast load times. Options to pause or clear cache as needed.</p>
+        </div>
+        <div class="feature-card">
+            <i class="fas fa-file-import"></i>
+            <h3>Bulk Import</h3>
+            <p>Parse multiple accounts at once for Stalker Portal, Xtream Codes, and M3U playlists.</p>
+        </div>
+        <div class="feature-card">
+            <i class="fas fa-sync"></i>
+            <h3>Database Sync</h3>
+            <p>Synchronize your configuration and account databases between different instances.</p>
+        </div>
+    </div>
+</section>
+
+<section class="requirements" id="requirements">
+    <h2>System Requirements</h2>
+    <div class="req-container">
+        <div class="req-text">
+            <p>UIPTV is available for <strong>Windows</strong> (x64, ARM64), <strong>Linux</strong> (x64, ARM64), and
+                <strong>macOS</strong> (Intel, Apple Silicon).</p>
+            <p>For the best experience, we recommend the following:</p>
+        </div>
+        <ul class="req-list">
+            <li>
+                <i class="fab fa-java"></i>
+                <div>
+                    <strong>Java 25</strong>
+                    <span>Bundled with installers, no separate installation needed.</span>
                 </div>
-            </div>
-            <div class="hero-image">
-                <img src="https://github.com/user-attachments/assets/53c56841-0fb0-4c72-af15-7b2160b3eb37" alt="UIPTV Screenshot">
-            </div>
-        </div>
-    </header>
-
-    <section id="features" class="features">
-        <h2>Key Features</h2>
-        <div class="feature-grid">
-            <div class="feature-card">
-                <i class="fas fa-tv"></i>
-                <h3>Multi-Protocol Support</h3>
-                <p>Stalker Portal, Xtream Codes, M3U Playlists (Local & Remote), and RSS Feeds.</p>
-            </div>
-            <div class="feature-card">
-                <i class="fas fa-play-circle"></i>
-                <h3>Advanced Player Support</h3>
-                <p>Includes embedded VLC & Lite players. Fully supports external players like MPV or SMPlayer.</p>
-            </div>
-            <div class="feature-card">
+            </li>
+            <li>
+                <i class="fas fa-file-video"></i>
+                <div>
+                    <strong>VLC Media Player</strong>
+                    <span>Highly recommended for the best video playback compatibility.</span>
+                </div>
+            </li>
+            <li>
                 <i class="fab fa-youtube"></i>
-                <h3>YouTube Integration</h3>
-                <p>Watch YouTube channels directly via RSS feeds (requires <code>yt-dlp</code>).</p>
-            </div>
-            <div class="feature-card">
-                <i class="fas fa-network-wired"></i>
-                <h3>Web Server & Headless</h3>
-                <p>Stream to any device on your network via browser. Supports headless mode for server-only usage.</p>
-            </div>
-            <div class="feature-card">
-                <i class="fas fa-search"></i>
-                <h3>Search & Favorites</h3>
-                <p>Real-time search filtering and easy favorites management for quick access to your content.</p>
-            </div>
-            <div class="feature-card">
-                <i class="fas fa-filter"></i>
-                <h3>Smart Filtering</h3>
-                <p>Exclude unwanted categories or channels. Pause filters on the fly for full access.</p>
-            </div>
-            <div class="feature-card">
-                <i class="fas fa-palette"></i>
-                <h3>Customizable UI</h3>
-                <p>Modern tab-based interface with Dark Mode, custom fonts, and scaling options.</p>
-            </div>
-            <div class="feature-card">
-                <i class="fas fa-sync-alt"></i>
-                <h3>Auto-Updates</h3>
-                <p>Built-in update checker ensures you are always running the latest version.</p>
-            </div>
-            <div class="feature-card">
-                <i class="fas fa-database"></i>
-                <h3>Performance</h3>
-                <p>SQLite caching for fast load times. Options to pause or clear cache as needed.</p>
-            </div>
-            <div class="feature-card">
-                <i class="fas fa-file-import"></i>
-                <h3>Bulk Import</h3>
-                <p>Parse multiple accounts at once for Stalker Portal, Xtream Codes, and M3U playlists.</p>
-            </div>
-            <div class="feature-card">
-                <i class="fas fa-sync"></i>
-                <h3>Database Sync</h3>
-                <p>Synchronize your configuration and account databases between different instances.</p>
-            </div>
-        </div>
-    </section>
+                <div>
+                    <strong>yt-dlp</strong>
+                    <span>Required if you intend to play YouTube videos via RSS feeds.</span>
+                </div>
+            </li>
+            <li>
+                <i class="fas fa-film"></i>
+                <div>
+                    <strong>FFmpeg</strong>
+                    <span>Required for the web app to play TS files.</span>
+                </div>
+            </li>
+        </ul>
+    </div>
+</section>
 
-    <section id="requirements" class="requirements">
-        <h2>System Requirements</h2>
-        <div class="req-container">
-            <div class="req-text">
-                <p>UIPTV is available for <strong>Windows</strong> (x64, ARM64), <strong>Linux</strong> (x64, ARM64), and <strong>macOS</strong> (Intel, Apple Silicon).</p>
-                <p>For the best experience, we recommend the following:</p>
-            </div>
-            <ul class="req-list">
-                <li>
-                    <i class="fab fa-java"></i>
-                    <div>
-                        <strong>Java 25</strong>
-                        <span>Bundled with installers, no separate installation needed.</span>
-                    </div>
-                </li>
-                <li>
-                    <i class="fas fa-file-video"></i>
-                    <div>
-                        <strong>VLC Media Player</strong>
-                        <span>Highly recommended for the best video playback compatibility.</span>
-                    </div>
-                </li>
-                <li>
-                    <i class="fab fa-youtube"></i>
-                    <div>
-                        <strong>yt-dlp</strong>
-                        <span>Required if you intend to play YouTube videos via RSS feeds.</span>
-                    </div>
-                </li>
-                <li>
-                    <i class="fas fa-film"></i>
-                    <div>
-                        <strong>FFmpeg</strong>
-                        <span>Required for the web app to play TS files.</span>
-                    </div>
-                </li>
-            </ul>
-        </div>
-    </section>
+<section class="guide-teaser" id="guide">
+    <h2>Getting Started</h2>
+    <p>Need help configuring your accounts or setting up the web server? Check out our comprehensive guide.</p>
+    <a class="btn secondary" href="https://github.com/xixogo5105/uiptv/blob/main/GUIDE.md" target="_blank">Read the User
+        Guide</a>
+</section>
 
-    <section id="guide" class="guide-teaser">
-        <h2>Getting Started</h2>
-        <p>Need help configuring your accounts or setting up the web server? Check out our comprehensive guide.</p>
-        <a href="https://github.com/xixogo5105/uiptv/blob/main/GUIDE.md" target="_blank" class="btn secondary">Read the User Guide</a>
-    </section>
-
-    <footer>
-        <div class="footer-content">
-            <p>&copy; 2024 UIPTV. Open Source Project.</p>
-            <div class="made-with-love">
-                <span>Made with <i class="fas fa-heart" style="color: #e25555;"></i> for</span>
-            </div>
-            <div class="os-icons">
-                <i class="fab fa-linux" title="Linux"></i>
-                <i class="fab fa-apple" title="macOS"></i>
-                <i class="fab fa-windows" title="Windows"></i>
-            </div>
-            <p class="disclaimer">Not affiliated with Linux, Apple, or Microsoft. All logos and trademarks belong to their respective owners.</p>
-            <div class="socials">
-                <a href="https://github.com/xixogo5105/uiptv"><i class="fab fa-github"></i></a>
-            </div>
+<footer>
+    <div class="footer-content">
+        <div class="made-with-love">
+            <span>Made with <i class="fas fa-heart" style="color: #e25555;"></i> for</span>
         </div>
-    </footer>
-    <script src="script.js"></script>
+        <div class="os-icons">
+            <i class="fab fa-linux" title="Linux"></i>
+            <i class="fab fa-apple" title="macOS"></i>
+            <i class="fab fa-windows" title="Windows"></i>
+            <a href="https://github.com/xixogo5105/uiptv"><i class="fab fa-github"></i></a>
+        </div>
+        <p class="disclaimer">Not affiliated with Linux, Apple, or Microsoft. All logos and trademarks belong to their
+            respective owners.</p>
+        <p>&copy; 2024 UIPTV. Open Source Project.</p>
+    </div>
+</footer>
+<script src="script.js"></script>
 </body>
 </html>
