--- a/website/index.html
+++ b/website/index.html
@@ -176,6 +176,29 @@
 
 <section class="guide-teaser" id="guide">
     <h2>Getting Started</h2>
+    <div class="guide-summary">
+        <div class="summary-item">
+            <i class="fas fa-cog"></i>
+            <div>
+                <h3>Configuration</h3>
+                <p>Customize player settings, manage filters, and adjust appearance in the Configuration tab.</p>
+            </div>
+        </div>
+        <div class="summary-item">
+            <i class="fas fa-users-cog"></i>
+            <div>
+                <h3>Manage Accounts</h3>
+                <p>Add Stalker Portals, Xtream Codes, M3U playlists, and RSS feeds. Use Bulk Import for multiple accounts.</p>
+            </div>
+        </div>
+        <div class="summary-item">
+            <i class="fas fa-server"></i>
+            <div>
+                <h3>Web Server</h3>
+                <p>Enable the web server to stream content to other devices on your local network.</p>
+            </div>
+        </div>
+    </div>
     <p>Need help configuring your accounts or setting up the web server? Check out our comprehensive guide.</p>
     <a class="btn secondary" href="https://github.com/xixogo5105/uiptv/blob/main/GUIDE.md" target="_blank">Read the User
         Guide</a>
