--- a/website/index.html
+++ b/website/index.html
@@ -176,28 +176,10 @@
 
 <section class="guide-teaser" id="guide">
     <h2>Getting Started</h2>
-    <div class="guide-summary">
-        <div class="summary-item">
-            <i class="fas fa-cog"></i>
-            <div>
-                <h3>Configuration</h3>
-                <p>Customize player settings, manage filters, and adjust appearance in the Configuration tab.</p>
-            </div>
-        </div>
-        <div class="summary-item">
-            <i class="fas fa-users-cog"></i>
-            <div>
-                <h3>Manage Accounts</h3>
-                <p>Add Stalker Portals, Xtream Codes, M3U playlists, and RSS feeds. Use Bulk Import for multiple accounts.</p>
-            </div>
-        </div>
-        <div class="summary-item">
-            <i class="fas fa-server"></i>
-            <div>
-                <h3>Web Server</h3>
-                <p>Enable the web server to stream content to other devices on your local network.</p>
-            </div>
-        </div>
+    <div style="text-align: left; max-width: 800px; margin: 0 auto 20px auto;">
+        <p>
+            UIPTV empowers you to manage and stream content from Stalker Portals, Xtream Codes, and M3U playlists with ease. It features a flexible playback system with embedded VLC and Lite players, plus support for external players. Key capabilities include a bulk account importer, a web server for streaming to other devices on your network, and database synchronization for multi-device setups. You also get granular control over your content with smart filtering and a customizable interface.
+        </p>
     </div>
     <p>Need help configuring your accounts or setting up the web server? Check out our comprehensive guide.</p>
     <a class="btn secondary" href="https://github.com/xixogo5105/uiptv/blob/main/GUIDE.md" target="_blank">Read the User
