--- a/website/index.html
+++ b/website/index.html
@@ -83,7 +83,7 @@
         <div class="feature-card">
             <i class="fas fa-play-circle"></i>
             <h3>Advanced Player Support</h3>
-            <p>Includes embedded VLC & Lite players. Fully supports external players like MPV or SMPlayer.</p>
+            <p>Includes embedded VLC & Lite players. Fully supports external players like MPV, SMPlayer, or Kodi.</p>
         </div>
         <div class="feature-card">
             <i class="fab fa-youtube"></i>
